infra/k8s/comments-depl.yaml
#Configuring the Deplyoment for comments
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: comments:1.0.0

---
#Configuring the cluster service for comments
apiVersion: v1
kind: Service
metadata:
  name: comments-clu-srv
spec:
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      targetPort: 5000
      port: 5000
