infra/k8s/event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: events:1.0.2

---
#Create a new client service for event
apiVersion: v1
kind: Service
metadata:
  name: event-clu-srv
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 4001
      targetPort: 4001
