infra/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:1.0.0

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clu-srv
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      targetPort: 3000
      port: 3000
