infra/k8s/post-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-nodeport-serv
spec:
  type: NodePort
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 4000
      targetPort: 4000
