infra/k8s/query-depl.yaml
#Configuring the Deployment for query service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: query:1.0.1

---
#Configuring the cluster service for query service
apiVersion: v1
kind: Service
metadata:
  name: query-clu-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      targetPort: 4002
      port: 4002
